# SkillScope

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/architecture/: refactor-comparison.md
examples/prompt-only-skill/: README.md  system_prompt.md
examples/tool-with-issues/: README.md  main.py  system_prompt.md
examples/well-structured-skill/: .gitignore  README.md  main.py  system_prompt.md
examples/well-structured-skill/tests/: test_main.py
presets/open-source/: general.yaml
skillscope/: __init__.py  __main__.py  cli.py
skillscope/ai_judges/: __init__.py  base.py  hallucination_judge.py  prompt_judge.py
skillscope/analyzers/: base.py  compatibility.py  correctness.py  maintainability.py  performance.py  prompt.py  security.py
skillscope/core/: config.py  engine.py  loader.py  models.py  registry.py
skillscope/fixers/: base.py  manager.py  prompt_fixer.py  security_fixer.py
skillscope/gui/: __init__.py  app.py
skillscope/reporters/: console.py  html_reporter.py  json_reporter.py  sarif.py
skillscope/utils/: cache.py  parser.py  patterns.py  tokens.py
tests/integration/: test_e2e.py
tests/unit/: test_ai_judges.py  test_analyzers.py  test_cache.py  test_cli.py  test_config.py  test_engine.py  test_fixers.py  test_gui.py  test_reporters.py  test_utils.py
