[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillscope"
version = "0.2.0"
description = "像 Lighthouse 一样检查你的 AI Skill"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "SkillScope Team"},
]
keywords = ["ai", "agent", "skill", "mcp", "prompt", "security", "lint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "tiktoken>=0.7",
]
gui = [
    "flask>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
]
all = ["skillscope[ai,gui,dev]"]

[project.scripts]
skillscope = "skillscope.cli:main"

[project.urls]
Homepage = "https://github.com/skillscope/skillscope"
Documentation = "https://docs.skillscope.dev"
Repository = "https://github.com/skillscope/skillscope.git"
Issues = "https://github.com/skillscope/skillscope/issues"

[tool.hatch.build.targets.wheel]
packages = ["skillscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=skillscope --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
